fix background image on ios devices

--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -17,4 +17,8 @@
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
+
+    @include mobile {
+        background-attachment: scroll;
+    }
 }
